DevOps/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-api
spec:
  type: ClusterIP
  selector:
    app: ai-api
  ports:
  - port: 5174
    targetPort: 5174
