DevOps/k8s/blazor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-blazor
spec:
  type: ClusterIP
  selector:
    app: ai-blazor
  ports:
  - port: 5099
    targetPort: 5099
